--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "graphql": "^0.9.3",
     "graphql-server-express": "^0.7.1",
     "graphql-tools": "^0.11.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "pg": "^6.1.5"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
-    "typescript": "^2.2.2"
+    "typescript": "^2.2.2",
+    "umzug": "^1.12.0"
   },
   "scripts": {
     "start": "nodemon src/index.js",
