--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "umzug": "^1.12.0"
   },
   "scripts": {
-    "start": "nodemon src/index.js",
-    "build": "tsc -w src/index.ts"
+    "start": "nodemon build/index.js",
+    "build": "tsc -w --outDir build src/index.ts"
   }
 }
